--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,9 @@ public/index.html
 public/sitemap.xml
 
 # Node.js and NPM
-node_modules
+node_modules/*
 npm-debug.log
+/package-lock.json
 
 # Firebase
 firebase-debug.log
